--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,6 @@
         <title>My CV</title>
     </head>
     <body>
-        <h1>HELLO WORLD</h1>
+        <h1>HELLO WORLD!</h1>
     </body>
 </html>
